--- a/Intermediate Front End Development Projects/Simon/index.jade
+++ b/Intermediate Front End Development Projects/Simon/index.jade
@@ -8,9 +8,10 @@ section
       .circle
         .brand
           span Simon
+          span.reg &#174;
         .middle-row
           .display
-            .round-number
+            .round-number 0
             span.label ROUND
           .start
             .start-button
@@ -23,3 +24,18 @@ section
           .power-bg
             .power-button.float-left
           span.on ON
+ footer
+ p Copyright © Rafael J. Rodriguez 2015. All Rights Reserved
+ p 
+   a(href='mailto:rafase282@gmail.com')
+     i.fa.fa-envelope.fa-fw
+   a(href='https://github.com/Rafase282',target='_blank')
+     i.fa.fa-github.fa-fw
+   a(href='https://www.linkedin.com/in/rafase282',target='_blank')
+     i.fa.fa-linkedin
+   a(href='http://codepen.io/Rafase282',target='_blank')
+     i.fa.fa-codepen
+   a(href='https://rafase282.wordpress.com',target='_blank')
+     i.fa.fa-wordpress
+   a(href='https://rafase282.wordpress.com',target='_blank') (
+     i.fa.fa-fire.fa-fw )
