--- a/Intermediate Front End Development Projects/Simon/index.jade
+++ b/Intermediate Front End Development Projects/Simon/index.jade
@@ -11,11 +11,11 @@ section
           span.reg &#174;
         .middle-row
           .display
-            .round-number 0
+            .round-number
             span.label ROUND
           .start
             .start-button
-            span.label START
+            span.label#start START
           .strict
             .strict-button
             span.label STRICT
@@ -24,8 +24,9 @@ section
           .power-bg
             .power-button.float-left
           span.on ON
+          // TO-DO: COME UP WITH A PROPER FOOTER FOR THE TEAM
  footer
- p Copyright © Rafael J. Rodriguez 2015. All Rights Reserved
+ p Copyright © Rafael J. Rodriguez & Guy 2015. All Rights Reserved
  p 
    a(href='mailto:rafase282@gmail.com')
      i.fa.fa-envelope.fa-fw
